# lumfunc

./: .gitignore  README.md  pyproject.toml
data/: emission_line_model_params.npy
data/filters/: README
data/seds/: README
libraries/default/: config.yaml
libraries/test/: config.yaml
notebooks/: plot_bands.ipynb  plot_emission_line_equiv_widths.ipynb  plot_lya_vs_balmer_decrement.ipynb
src/lumfunc/: __init__.py  _igm_inoue.py  _igm_madau.py  config.py  dust.py  emission_lines.py  igm.py  photometry.py  sed.py  utils.py
