[project]
name = "lumfunc"
version = "0.1.0"
dependencies = [
  "astropy",
  "black",
  "dsps",
  "flake8",
  "flake8-bugbear",
  "flake8-simplify",
  "galsim",
  "isort",
  "jax",
  "jax_cosmo",
  "jupyterlab",
  "lbg_tools",
  "matplotlib",
  "mypy",
  "numpy",
  "pandas",
  "pyarrow",
  "schwimmbad",
  "scikit-learn",
  "scipy",
]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true